--- a/DhairyaModule9/src/main/AndroidManifest.xml
+++ b/DhairyaModule9/src/main/AndroidManifest.xml
@@ -13,16 +13,20 @@
         android:theme="@style/Theme.DhairyaLab9"
         tools:targetApi="31">
         <activity
-            android:name=".PalActivity9"
+            android:name=".DhairyaPalSplash"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.DhairyaLab9.NoActionBar">
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PalActivity9"
+            android:exported="true"
+            android:theme="@style/Theme.DhairyaLab9.NoActionBar" />
     </application>
 
 </manifest>
